# zkSnark-FinalProject

./: Cargo.toml  Final project-prime_numbers.pptx  README.md  build.rs
.github/workflows/: rust.yml
bench/: fibo.py  matrix.py  prime.py
benches/: bench.rs
frontend/: package.json
frontend-next/: package-lock.json  package.json
frontend-next/src/app/: layout.jsx  oldpag.jsx  page.jsx  verify.jsx
frontend-next/src/app/components/: Navbar.jsx
frontend-next/src/app/information/: page.jsx
frontend-next/src/app/inputFibonacci/: page.jsx
frontend-next/src/app/inputFibonachi/: page.jsx
frontend-next/src/app/inputMatrix/: page.jsx
frontend-next/src/app/inputPrime/: page.jsx
frontend-next/src/app/options/: page.jsx
frontend-next/src/app/verify/: page.jsx
frontend-next/src/app/verifyPrime/: page.jsx
frontend-next/src/styles/: Home.module.css  Navbar.module.css  information.module.css  layout.module.css  main.css  matrix.module.css  oldHome.module.css  options.module.css  prime.module.css  result.module.css  verify.module.css
frontend/src/: App.js
prime-react/: package-lock.json
sp1/: README.md
sp1/miller-rabin/program/: Cargo.toml
sp1/miller-rabin/program/elf/: riscv32im-succinct-zkvm-elf
sp1/miller-rabin/program/src/: main.rs
sp1/miller-rabin/script/: Cargo.toml
src/: check_hash.rs  common.rs  constraints.rs  cubic_demo.rs  lib.rs  main.rs  marlin_demo.rs  miller_rabin.rs  oldcode.txt  prime_constrains.rs  prime_demo.rs  shagadget.rs  test.rs  tests.rs
src/arkworks/: mod.rs
src/arkworks/backend/: Factorization.rs  Fibbonaci_handler.rs  fibbonaci_handler.rs  linear_equations.rs  matrix_proof.rs  mod.rs  prime_snark.rs  quadraticequationcircuit.rs
src/arkworks/constraints/: fibbonaci.rs  linear_equations_constraints.rs  mod.rs  preimage.rs  prime_constraints.rs
src/arkworks/fermat/: constants.rs  constraints.rs  hasher.rs  mod.rs  modpow_circut.rs  modulo.rs  prime_circut.rs  sha256.rs
src/arkworks/marlin/: mod.rs  rng.rs  test.rs
src/arkworks/matrix_proof_of_work/: alloc.rs  cmp.rs  constraints.rs  hasher.rs  io.rs  matrix_obj.rs  mod.rs
src/arkworks/preimage_poseidon/: constraints.rs  hash_parm.rs  mod.rs  pf.rs
src/arkworks/prime_ofir/: mod.rs  modpow_circut.rs  modulo.rs
src/arkworks/prime_snark/: constants.rs  fermat_circut.rs  hasher.rs  mod.rs  modpow_circut.rs  modulo.rs  prime_circut.rs
src/arkworks/prime_snark/utils/: hasher.rs  (+4 more)
src/backend/: LinearEquationCircuit.rs  compute.rs  linear_equations.rs  mod.rs  perfectsquare.rs  prime_snark.rs
src/constraints/: linear_equations_constraints.rs  miller_rabin_r1cs.rs  miller_rabin_r1cs_v2.rs  miller_rabin_v3.rs  mod.rs  modpow_circuit.rs  modulo.rs  preimage.rs  prime_constraints.rs
src/constraints/miller_rabin/: miller_rabin_r1cs.rs  miller_rabin_v3.rs  mowpow2.rs
src/cubic_gadget/: constraints.rs
src/demoes_for_help/: multiply_demo.rs
src/fields_tests/: mod.rs
src/matrix_mul/: cmp.rs  constraints.rs  hasher.rs  matrix.rs  mod.rs  utils.rs
src/matrix_mul/hashing/: mod.rs
src/matrix_proof_of_work/: hasher.rs
src/matrix_proof_of_work/hashing/: shagadget.rs
src/miller_rabin/: miller_rabin.rs
src/old_code/: check_hash.rs  tests.rs
src/old_code/demoes_for_help/: marlin_demo.rs
src/old_code/miller_rabin_old/: miller_rabin_r1cs_v2.rs  modpow.rs
src/prime_gadget/: constraints.rs
src/sp1/: README.md  mod.rs
src/sp1/miller_rabin/: README.md  rust-toolchain
src/sp1/miller_rabin/script/: Cargo.toml  build.rs  mod.rs
src/sp1/miller_rabin/script/src/: main.rs
src/sp1/old_code/: prime_constraints.rs
static/: index.html
(+12 files in other folders)
