[package]
name = "prime-snarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.2", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-snark = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-groth16 = {version = "^0.4.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-ec = { version = "0.4" }
sha2 = "0.10.8"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
num-integer = "0.1.46"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
actix-cors = "0.7.0"
actix-rt = "2.4.0"

