[package]
name = "prime-snarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.4.0", features= ["std", "colored","print-trace"] }
ark-ff = { version = "^0.4.2", default-features = true }
ark-serialize = { version = "^0.4.0", default-features = true }
ark-relations = { version = "^0.4.0", default-features = true }
ark-bls12-381 = { version = "^0.4.0", default-features = true, features = [ "curve" ] }
ark-snark = { version = "^0.4.0", default-features = true }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-groth16 = {version = "^0.4.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
sha2 = "0.10.8"
ark-crypto-primitives = { version = "^0.4.0", features = ["ark-r1cs-std", "commitment", "crh", "r1cs", "snark", "print-trace", "prf"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
num-integer = "0.1.46"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
actix-cors = "0.7.0"
actix-rt = "2.4.0"
num-traits = "0.2.19"


