[workspace]
[package]
version = "0.1.0"
name = "miller-rabin-script"
edition = "2021"



[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6"
actix-cors = "0.7.0"
actix-rt = "2.4.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
